@@ -1,4 +1,5 @@
 HEAD
+	+ Do not write reverse zone files if generate_reverse_zones is false
 	+ Do not set localhost as primary resolver if users module is configured
 	  in external AD mode. In this case, the AD DNS server must be used.
 3.2.3
